k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-demo-svc
spec:
  type: NodePort
  selector:
    app: crm-demo
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
